--- a/style.css
+++ b/style.css
@@ -137,12 +137,13 @@ body {
 #info .info-box{
     display: flex;
     text-align: center;
-    padding: 20px 0 20px;
+    padding: 40px 0 40px;
+    margin: 0 auto;
 }
 
-#info h2{
+/* #info h2{
     text-align: center;
-}
+} */
 
 #info .info-box img{
     max-width: 50%;
@@ -150,20 +151,58 @@ body {
 }
 
 #info .text-content{
-    padding: 0 80px;
+    padding: 20px;
     display: flex;
     flex-direction: column;
-    align-items: flex;
+    align-items: left;
     justify-content: center;
+    text-align: left;
 }
 
-#info .text-content h4{ 
-    padding: 0px 0 14px;
+#info .text-content h4, h3{ 
+    padding: 20px 14px 14px;
 }
 
 #product1 h2{
     text-align: center;
     padding: 20px 0 20px;
+}
+
+#product1{
+    text-align: center;
+}
+
+#product1 .pro-container{
+   display: flex;
+   justify-content: row;
+   padding-top: 20px;
+   flex-wrap: wrap;
+
+}
+
+#product1 .pro{
+    width: 33%;
+    min-width: 250px;
+    padding: 10px 50px;
+    border: 1px solid rgba(0, 0, 0, 0.02);
+    border-radius: 25px;
+    cursor: pointer;
+    box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.02);
+}
+
+#product1 .pro img{
+    width: 100%;
+    border-radius: 20px;
+}
+
+#product1 .pro .des{
+    text-align: start;
+    padding: 10px 0;
+}
+
+#product1 .pro .des span{
+    padding-top: 5px;
+    font-weight: bold;
 }
 
 
@@ -200,4 +239,14 @@ input[type=text], select, textarea {
     padding: 20px;
     width: 50%;
     margin: auto;
+  }
+
+  .container h4{
+    padding: 50px 0px;
+    text-align: center;
+  }
+
+  #contact{
+    display: flex;
+    flex-direction: column;
   }
